# TwoLayer-Model

./: CMakeLists.txt  auto.js  fit.cpp.backup  fit.h.backup  main.cpp  model.cpp  model.h  star.h
a.out.dSYM/Contents/Resources/DWARF/: a.out
data/: b1821_sync.sh  j0218_cur.sh  j0218_sync.sh  j1939_cur.sh
data/backup/: b1821_IC.sh  b1821_cur.sh  b1821_total.sh  j0218_IC.sh  j0218_total.sh  j1939_IC.sh  j1939_sync.sh  j1939_total.sh
log/: a.out  test.cpp
main.dSYM/Contents/Resources/DWARF/: main
processData/: init_IC.cpp  init_IC.h  init_cur.cpp  init_cur.h  init_sync.cpp  init_sync.h  init_total.cpp  init_total.h  write.h
src/: IC.cpp  IC.h  Makefile  approximation.h  constants.h  curvature.cpp  curvature.h  property.cpp  property.h  runge.cpp  runge.h  sync.cpp  sync.h  using.h  wwcFit.cpp  wwcFit.h
src_backup/: IC.cpp  IC.h  approximation.h  constants.h  curvature.cpp  curvature.h  property.cpp  property.h  runge.h  sync.cpp  sync.h
